Causeview Package Complete/ant script/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Gift__c</fullName>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consecutive_Years_of_Giving__c</fullName>
        <label>Consecutive Years of Giving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consecutive_Years_of_Transactions__c</fullName>
        <label>Consecutive Years of Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constituent_Codes__c</fullName>
        <label>Constituent Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Gift__c</fullName>
        <label>Date of First Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Transaction__c</fullName>
        <label>Date of First Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Gift__c</fullName>
        <label>Date of Last Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Transaction__c</fullName>
        <label>Date of Last Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Gift__c</fullName>
        <formula>TODAY() -  Date_of_Last_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Gift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Default organization email address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_Addressee__c</fullName>
        <description>Household Addressee - used for mailings.</description>
        <label>Household Addressee</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Salutation__c</fullName>
        <description>Household Salutation - used for communication with household.</description>
        <label>Household Salutation</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Gift__c</fullName>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Amount__c</fullName>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Constituent or Organization meets the major donor status requirements.</description>
        <label>Major Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <description>Organization ID</description>
        <externalId>true</externalId>
        <label>Organization ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solicit_Codes__c</fullName>
        <label>Solicit Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Placeholder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Gifts__c</fullName>
        <description>Total number of gifts by organization within current fiscal year</description>
        <inlineHelpText>Total number of gifts by organization within current fiscal year</inlineHelpText>
        <label>Quantity of Fiscal Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Household_Fundraising__c</fullName>
        <label>Total Fiscal Household Fundraising</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Household_Giving__c</fullName>
        <label>Total Fiscal Household Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Household_Transactions__c</fullName>
        <label>Total Fiscal Household Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Transaction_Amount__c</fullName>
        <description>Total dollar value of transactions by organization within current fiscal year</description>
        <inlineHelpText>Total dollar value of transactions by organization within current fiscal year</inlineHelpText>
        <label>Total Fiscal Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Transactions__c</fullName>
        <description>Total number of transactions by organization within current fiscal year</description>
        <inlineHelpText>Total number of transactions by organization within current fiscal year</inlineHelpText>
        <label>Quantity of Fiscal Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Year_Giving__c</fullName>
        <description>Total dollar value of gifts by organization within current fiscal year</description>
        <inlineHelpText>Total dollar value of gifts by organization within current fiscal year</inlineHelpText>
        <label>Total Fiscal Year Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Giving_Last_Year__c</fullName>
        <label>Total Giving Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Giving_Two_Years_Ago__c</fullName>
        <label>Total Giving Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Fundraising__c</fullName>
        <label>Total Household Fundraising</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Giving__c</fullName>
        <label>Total Household Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Transactions__c</fullName>
        <label>Total Household Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Fundraising__c</fullName>
        <label>Total Lifetime Fundraising</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Gifts__c</fullName>
        <description>Total number of gifts by organization within lifetime</description>
        <inlineHelpText>Total number of gifts by organization within lifetime</inlineHelpText>
        <label>Quantity of Lifetime Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Giving__c</fullName>
        <description>Total dollar value of gifts by organization within lifetime</description>
        <inlineHelpText>Total dollar value of gifts by organization within lifetime</inlineHelpText>
        <label>Total Lifetime Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Transaction_Amount__c</fullName>
        <description>Total dollar value of transactions by organization within lifetime</description>
        <inlineHelpText>Total dollar value of transactions by organization within lifetime</inlineHelpText>
        <label>Total Lifetime Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Transactions__c</fullName>
        <description>Total number of transactions by organization within lifetime</description>
        <inlineHelpText>Total number of transactions by organization within lifetime</inlineHelpText>
        <label>Quantity of Lifetime Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Traveled_This_Year__c</fullName>
        <label>Total Miles Traveled This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Traveled__c</fullName>
        <label>Total Miles Traveled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Completed_This_Year__c</fullName>
        <label>Total Service Hours Completed This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Completed__c</fullName>
        <label>Total Service Hours Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Status__c</fullName>
        <label>Trade Status</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Site</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>All_Households</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <label>All Households</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>Contact_00NA0000008iAeMMAU</fullName>
        <active>true</active>
        <field>Contact.Household__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Household</name>
    </namedFilters>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <description>A household unit sharing multiple constituents</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>Organization, Corporation, School, Institution, etc.</description>
        <label>Organization</label>
    </recordTypes>
</CustomObject>